using_index_html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <li> 
                 <a href="#">Profile</a>
             </li>
-            <li> <a href="/html/story.html">Story of My Life</a></li>
+            <li> <a href="/story.html">Story of My Life</a></li>
             <li> 
-                <a href="/html/contact_me.html">Contact me</a>
+                <a href="/contact_me.html">Contact me</a>
             </li>
         </ul>
     </div>
