--- a/story.html
+++ b/story.html
@@ -16,11 +16,11 @@
     <div class="navbar">
         <ul>
             <li> 
-                <a href="/html/landing_page.html">Profile</a>
+                <a href="/index.html">Profile</a>
             </li>
             <li> <a href="#">Story of My Life</a></li>
             <li> 
-                <a href="/html/contact_me.html">Contact me</a>
+                <a href="/contact_me.html">Contact me</a>
             </li>
         </ul>
     </div>
