--- a/contact_me.html
+++ b/contact_me.html
@@ -16,9 +16,9 @@
     <div class="navbar">
         <ul>
             <li> 
-                <a href="/html/landing_page.html">Profile</a>
+                <a href="/index.html">Profile</a>
             </li>
-            <li> <a href="/html/story.html">Story of My Life</a></li>
+            <li> <a href="/story.html">Story of My Life</a></li>
             <li> 
                 <a href="#">Contact me</a>
             </li>
