--- a/contact_me.html
+++ b/contact_me.html
@@ -30,9 +30,10 @@
 
     <div class="info">
         <p id="starting">
-            You never know what you find in a stranger
+            You never know what you find in a stranger.
         </p>
-        <p id="contact_details">Feel Free to Contact me via social media accounts</p>
+        <br>
+        <p id="contact_details">Feel Free to Contact me via social media accounts.</p>
     </div>
 
     <div class="links">
