--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet">
 </head>
-<body style="background-color: #5CDB95">
+<body style="background-color: #145230">
 
     <div class="navbar">
         <ul>
@@ -31,25 +31,25 @@
 
     <div class="desc">
         <p> 
-            Hello, I am Akshat Toolaj Sinha , Second Year student studying at the 
-            prestigious Indian Institute of Technology Ropar, Punjab with Majoring in Computer Science and Engineering, 
-            I am Natively from Roorkee, Uttrakhand.
+            Hello, I am Akshat Toolaj Sinha , second year undergraduate student studying at the 
+            prestigious Indian Institute of Technology Ropar, Punjab with majoring in Computer Science & Engineering, 
+            I am living in Roorkee, Uttrakhand.
             <br>
             <br>
-            I am fond of doing Competative Programming and solving algorithmic puzzles. I am trying to learn technologies like React Native, node.js etc.
+            I am fond of doing Competative Programming and solving algorithmic puzzles and learning new technologies like React Native, Node.js etc.
             I have also tried my hands on Data Analytics, Machine Learning, Data Visualizations.
 
             I like learning about Economics and Finance especially Financial Institutions and their 
-            management. I am huge fan of motorsport racing especially Formula One Racing.
+            management. I am huge fan of motorsport racing especially Formula One.
 
             <br>
             <br>
             <p id="link_text">Click <a href="https://drive.google.com/file/d/1_L4kZPtHoJmfU9Jy6PLFDXB-w6pMmsIi/view?usp=sharing" id="link" target="blank"> here</a> to see my resume</p>
         </p>
     </div>
-    <footer>
+    <!-- <footer>
         <p id="foot">&#169 Akshat Toolaj Sinha</p>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
