--- a/story.html
+++ b/story.html
@@ -27,17 +27,17 @@
 
 
     <p id="content">
-        I was average student in my initial time in school because I was constantly missing school due to my many illness. I likes mathematics always in my school days. Then I choose Science stream in Class 11 <sup>th</sup> and started preparing for JEE. During my JEE Days, I grew fond of Economics and Finance thanks to <a href="https://www.youtube.com/c/EconomicsExplained" target =blank class="link">  Economics Explained</a> and Finance Channels like <a href="https://www.youtube.com/c/warikoo" target="blank" class="link"> Ankur Warikoo</a> and <a href="https://www.youtube.com/c/rachanaphadke" target="blank" class="link"> Rachna Ranande</a>. I am still exploring these topics and getting better by each passing day. I believe Finance has a role to play in everyone's life and Financial independence is necessary than anyting in today's world.
+        I was an average student in my initial time of school because I was constantly missing school due to many illness. I liked mathematics in my school days. Then I choose PCM in Class 11 <sup>th</sup> and started preparing for JEE. During my JEE days, I grew fond of Economics and Finance, thanks to <a href="https://www.youtube.com/c/EconomicsExplained" target =blank class="link">  Economics Explained</a> and Finance Channels like <a href="https://www.youtube.com/c/warikoo" target="blank" class="link"> Ankur Warikoo</a> &<a href="https://www.youtube.com/c/rachanaphadke" target="blank" class="link"> Rachna Ranande</a>. I am still exploring these topics and getting better by each passing days. I believe Finance has a role to play in everyone's life and Financial independence is necessary than anyting in today's world.
         <br>
         <br>
 
         Let's come to JEE. I was only preparing 
-        for JEE Mains, I scored well in January JEE Mains.I was very happy to get a good NIT, but life has other plans. Lockdown was announced in March, wasn't able to give my last board exam for which I am grateful. During that time I studied like there is no tommorow and gave my JEE Advance.
+        for JEE Mains, I scored well in January JEE Mains.I was very happy that I would get in a Tier-1 NIT , but life had other plans. National Lockdown was announced in March, wasn't able to give my sixth and last subject board exam for which I was grateful. During lockdown, I studied like there is no tommorow and took my JEE Advance-2020.
 
         <br>
         <br>
 
-        I got a good rank and got accepted into Indian Institute of Technology, Ropar and yeah doing many things, which I would not have ever thought of after coming to IIT and yeah Life continues on.
+        I got a good rank and enrolled in Indian Institute of Technology, Ropar , doing many things which I would not have ever thought of, after coming to IIT and Life continues on.
         
     </p>
     <footer>
