--- a/contact_me.html
+++ b/contact_me.html
@@ -47,9 +47,9 @@
             <img src="/photos/github.png">
         </a>
     </div>
-
+<!-- 
     <footer>
         <p id="foot">&#169 Akshat Toolaj Sinha</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
