--- a/story.html
+++ b/story.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet">
 
 </head>
-<body style="background-color: #5CDB95;">
+<body style="background-color: #528669">
 
     <div class="navbar">
         <ul>
@@ -40,8 +40,8 @@
         I got a good rank and enrolled in Indian Institute of Technology, Ropar , doing many things which I would not have ever thought of, after coming to IIT and Life continues on.
         
     </p>
-    <footer>
+    <!-- <footer>
         <p id="foot">&#169 Akshat Toolaj Sinha</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
