resume link added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <p> 
                 Hello, I am <b><i>Akshat Toolaj Sinha</i></b> , second year undergraduate student studying at the 
                 Indian Institute of Technology Ropar, Punjab with majoring in Computer Science & Engineering. 
+                <br>
+
+                Click <a href="https://drive.google.com/file/d/1LKP6Fbu1XVVxfXbWD7SvLFo72EKo73sh/view?usp=sharing" target="_blank" style="color: #61dafb; text-decoration: none;">here</a> to see resume.
             </p>
         </div> 
     </section>
@@ -128,9 +131,6 @@
         </a>
         <a href="https://github.com/akshat1712" target="blank">
             <img src="/photos/github.png">
-        </a>
-        <a href="https://drive.google.com/file/d/1M-wOnS5r0S1X_UFD8lGHqgHxRoNt-vHw/view?usp=sharing" target="_blank">
-            <img src="/photos/resume.jpg">
         </a>
     </div>
     
