--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     
         <div class="desc">
             <p> 
-                Hello, I am <b><i>Akshat Toolaj Sinha</i></b> , second year undergraduate student studying at the 
+                Hello, I am <b><i>Akshat Toolaj Sinha</i></b> , third year undergraduate student studying at the 
                 Indian Institute of Technology Ropar, Punjab with majoring in Computer Science & Engineering. 
                 <br>
 
-                Click <a href="https://drive.google.com/file/d/1LKP6Fbu1XVVxfXbWD7SvLFo72EKo73sh/view?usp=sharing" target="_blank" style="color: #61dafb; text-decoration: none;">here</a> to see resume.
+                Click <a href="https://drive.google.com/file/d/1kvaJzLu2dSr7k_vT5Lt94L4SIUAQtgIp/view?usp=sharing" target="_blank" style="color: #61dafb; text-decoration: none;">here</a> to see resume.
             </p>
         </div> 
     </section>
